@@ -1,5 +1,5 @@
 /*
- * Copyright 2018 - 2021 Valtech GmbH
+ * Copyright 2018 - 2022 Valtech GmbH
  *
  * Permission is hereby granted, free of charge, to any person obtaining a copy of this software and
  * associated documentation files (the "Software"), to deal in the Software without restriction,
@@ -22,7 +22,7 @@
  * 
  * @author Roxana Muresan
  */
-@Version("4.7.0")
+@Version("4.8.0")
 package de.valtech.aecu.api.groovy.console.bindings;
 
 import org.osgi.annotation.versioning.Version;
