@@ -1,5 +1,6 @@
 5.3.0
   - AecuService: added executeWithInstallHookHistory() method (172)
+  - Binding: added "not" versions of all filters
 
 2022-03-28 5.2.0
   - Added forResourcesByPropertyQuery() to binding
